# backend/src/app.js
@@ -14,6 +14,7 @@ import floorRoutes from './routes/floor.routes.js';
 import parkingSlotRoutes from './routes/parking-slot.routes.js';
 import parkingRowRoutes from './routes/parking-row.routes.js';
 import parkingSessionRoutes from './routes/parking-session.routes.js';
+import parkingBookingRoutes from './routes/parking-booking.routes.js';
 import packageRoutes from './routes/package.routes.js';
 import subscriptionRoutes from './routes/subscription.routes.js';
 import paymentRoutes from './routes/payment.routes.js';
@@ -51,6 +52,7 @@ app.use('/api/v1/floors', floorRoutes);
 app.use('/api/v1/parking-slots', parkingSlotRoutes);
 app.use('/api/v1/parking-rows', parkingRowRoutes);
 app.use('/api/v1/parking-sessions', parkingSessionRoutes);
+app.use('/api/v1/parking-bookings', parkingBookingRoutes);
 app.use('/api/v1/packages', packageRoutes);
 app.use('/api/v1/subscriptions', subscriptionRoutes);
 app.use('/api/v1/payments', paymentRoutes);
